--- a/assets/css/audioplayer.css
+++ b/assets/css/audioplayer.css
@@ -70,8 +70,10 @@ a{
   width: 100%;
   height: 100%;
   background-size: cover;
+  border: none !important;
 }
 
 .imgIsPlaying {
   opacity: 0.6;
+  border: none !important;
 }
