--- a/assets/css/form-project.css
+++ b/assets/css/form-project.css
@@ -6,10 +6,6 @@
   justify-content: center;
 }
 
-.container {
-  display: block;
-}
-
 form label {
   font-family: "Gill Sans", sans-serif !important;
   font-weight: bold;
@@ -20,6 +16,7 @@ form label {
 }
 
 .form-label {
+  text-align: center;
   margin-bottom: 0.5rem;
   font-size: 0.875rem;
   font-weight: 400;
