--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,6 +116,27 @@ nav p {
   background-size:cover;
 }
 
+@media screen and (min-width: 1280px) and (max-width: 2000px)
+{
+  .title_site {
+    height: 15% !important;
+    font-size: auto !important;
+    padding-top: 0;
+    padding-bottom: 35px !important;
+    margin: 0;
+  }
+  .subtitle_site {
+    height: 5% !important;
+    font-size: auto !important;
+    padding-top: 0;
+    padding-bottom: 50px !important;
+    margin:0;
+  }
+  .container {
+    margin-top: -55px;
+    padding: 0;
+  }
+}
 @media screen and (max-width: 1280px) and (orientation: portrait)
 {
   html,
