--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -291,6 +291,9 @@ nav p {
     flex-direction: column;
     flex-wrap: wrap;
   }
+  #turnDeviceNotification {
+    display: none;
+  }
 }
 
 .big-title {
