--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,7 +116,7 @@ nav p {
   background-size:cover;
 }
 
-@media screen and (min-width: 1280px) and (max-width: 2000px)
+@media screen and (max-width: 2000px)
 {
   .title_site {
     height: 15% !important;
