--- a/assets/css/affiche.css
+++ b/assets/css/affiche.css
@@ -1,20 +1,31 @@
 .zoom img {
-    height: 20vh;
+    height: 30vh;
     width: auto;
-    -webkit-transition: all 3s ease;
-    -moz-transition: all 3s ease;
-    -ms-transition: all 3s ease;
-    transition: all 3s ease;
+    display:inline-block;
+    border:0;
+    position: relative;
+    -webkit-transition: all 3s ease-in;
+    -webkit-transform: scale(1); 
+    -ms-transition: all 3s ease-in;
+    -ms-transform: scale(1); 
+    -moz-transition: all 3s ease-in;
+    -moz-transform: scale(1);
+    transition: all 3s ease-in;
+    transform: scale(1);  
     
 }
   
 .zoom img:hover {
-    height: 60vh;
+    height: 30vh;
     width: auto;
-    margin-top:0;
-    margin-right:auto;
-    margin-bottom:0;
-    margin-left:auto;
-    background-repeat: no-repeat;
-    overflow: visible;
+    box-shadow: 0px 0px 150px #000000;
+    z-index: 2;
+    -webkit-transition: all 3s ease-in;
+    -webkit-transform: scale(1.5);
+    -ms-transition: all 3s ease-in;
+    -ms-transform: scale(1.5);   
+    -moz-transition: all 3s ease-in;
+    -moz-transform: scale(1.5);
+    transition: all 3s ease-in;
+    transform: scale(2.5);
 }
