--- a/assets/css/affiche.css
+++ b/assets/css/affiche.css
@@ -1,4 +1,4 @@
-.zoom img {
+.zoom {
     height: 30vh;
     width: auto;
     display:inline-block;
@@ -14,18 +14,72 @@
     transform: scale(1);  
     
 }
-  
-.zoom img:hover {
+
+ 
+.zoom:hover {
     height: 30vh;
     width: auto;
     box-shadow: 0px 0px 150px #000000;
     z-index: 2;
     -webkit-transition: all 3s ease-in;
-    -webkit-transform: scale(1.5);
+    -webkit-transform: scale(2.5);
     -ms-transition: all 3s ease-in;
-    -ms-transform: scale(1.5);   
+    -ms-transform: scale(2.5);   
     -moz-transition: all 3s ease-in;
-    -moz-transform: scale(1.5);
+    -moz-transform: scale(2.5);
     transition: all 3s ease-in;
     transform: scale(2.5);
+ }
+ 
+ .affiche {
+    border-radius: 25px;
+    height: 30vh;
+    width: auto;
+ }
+
+ @media screen and (max-width: 1280px) and (orientation: portrait)
+{
+
+    .affiche {
+        transition: all 3s ease-in;
+        transform: translate(0, 0);
+    }
+    
+    .affiche:hover {
+        transition: all 3s ease-in;
+        transform: translate(25%, -50%);
+    }
+}
+
+@media screen and (max-width: 1000px)
+{
+    .zoom{
+        height: 10 !important;
+        width: auto;
+        display:inline-block;
+        border:0;
+        position: relative;
+        -webkit-transition: all 3s ease-in;
+        -webkit-transform: scale(1); 
+        -ms-transition: all 3s ease-in;
+        -ms-transform: scale(1); 
+        -moz-transition: all 3s ease-in;
+        -moz-transform: scale(1);
+        transition: all 3s ease-in;
+        transform: scale(1);  
+    }
+    .zoom:hover {
+        height: 10vh !important;
+        width: auto;
+        box-shadow: 0px 0px 150px #000000;
+        z-index: 2;
+        -webkit-transition: all 3s ease-in;
+        -webkit-transform: scale(2.5);
+        -ms-transition: all 3s ease-in;
+        -ms-transform: scale(2.5);   
+        -moz-transition: all 3s ease-in;
+        -moz-transform: scale(2.5);
+        transition: all 3s ease-in;
+        transform: scale(2.5);
+     }
 }
