--- a/assets/css/affiche.css
+++ b/assets/css/affiche.css
@@ -4,13 +4,13 @@
     display:inline-block;
     border:0;
     position: relative;
-    -webkit-transition: all 3s ease-in;
+    -webkit-transition: all 500ms ease-in;
     -webkit-transform: scale(1); 
-    -ms-transition: all 3s ease-in;
+    -ms-transition: all 500ms ease-in;
     -ms-transform: scale(1); 
-    -moz-transition: all 3s ease-in;
+    -moz-transition: all 500ms ease-in;
     -moz-transform: scale(1);
-    transition: all 3s ease-in;
+    transition: all 500ms ease-in;
     transform: scale(1);  
     
 }
@@ -21,13 +21,13 @@
     width: auto;
     box-shadow: 0px 0px 150px #000000;
     z-index: 2;
-    -webkit-transition: all 3s ease-in;
+    -webkit-transition: all 500ms ease-in;
     -webkit-transform: scale(2.5);
-    -ms-transition: all 3s ease-in;
+    -ms-transition: all 500ms ease-in;
     -ms-transform: scale(2.5);   
-    -moz-transition: all 3s ease-in;
+    -moz-transition: all 500ms ease-in;
     -moz-transform: scale(2.5);
-    transition: all 3s ease-in;
+    transition: all 500ms ease-in;
     transform: scale(2.5);
  }
  
@@ -41,12 +41,12 @@
 {
 
     .affiche {
-        transition: all 3s ease-in;
+        transition: all 500ms ease-in;
         transform: translate(0, 0);
     }
     
     .affiche:hover {
-        transition: all 3s ease-in;
+        transition: all 500ms ease-in;
         transform: translate(25%, -50%);
     }
 }
@@ -59,13 +59,13 @@
         display:inline-block;
         border:0;
         position: relative;
-        -webkit-transition: all 3s ease-in;
+        -webkit-transition: all 500ms ease-in;
         -webkit-transform: scale(1); 
-        -ms-transition: all 3s ease-in;
+        -ms-transition: all 500ms ease-in;
         -ms-transform: scale(1); 
-        -moz-transition: all 3s ease-in;
+        -moz-transition: all 500ms ease-in;
         -moz-transform: scale(1);
-        transition: all 3s ease-in;
+        transition: all 500ms ease-in;
         transform: scale(1);  
     }
     .zoom:hover {
@@ -73,13 +73,13 @@
         width: auto;
         box-shadow: 0px 0px 150px #000000;
         z-index: 2;
-        -webkit-transition: all 3s ease-in;
+        -webkit-transition: all 500ms ease-in;
         -webkit-transform: scale(2.5);
-        -ms-transition: all 3s ease-in;
+        -ms-transition: all 500ms ease-in;
         -ms-transform: scale(2.5);   
-        -moz-transition: all 3s ease-in;
+        -moz-transition: all 500ms ease-in;
         -moz-transform: scale(2.5);
-        transition: all 3s ease-in;
+        transition: all 500ms ease-in;
         transform: scale(2.5);
      }
 }
