--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -913,3 +913,8 @@ footer {
   border-radius: 10px;
   border: 1px solid var(--my-color);
 }
+
+.about img {
+  width: 20vw !important;
+  text-align: center;
+}
