--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,11 +14,12 @@
 #preload-14 { background-image: url('../img/miniature/Avé Maria Antillais.png') no-repeat -9999px -9999px; }
 #preload-15 { background-image: url('../img/miniature/Pénélope.png') no-repeat -9999px -9999px; }
 #preload-16 { background-image: url('../img/miniature/Konjé bonifié.png') no-repeat -9999px -9999px; }
+#preload-17 { background-image: url('../img/miniature/blokaj.png') no-repeat -9999px -9999px; }
 
-#preload-17 { background-image: url('../img/album cover/Mal_tèt.jpeg') no-repeat -9999px -9999px; }
-#preload-18 { background-image: url('../img/album cover/Konsyans.jpg') no-repeat -9999px -9999px; }
-#preload-19 { background-image: url('../img/album cover/Eritaj.jpg') no-repeat -9999px -9999px; }
-#preload-20 { background-image: url('../img/album cover/Misiyon.jpg') no-repeat -9999px -9999px; }
+#preload-18 { background-image: url('../img/album cover/Mal_tèt.jpeg') no-repeat -9999px -9999px; }
+#preload-19 { background-image: url('../img/album cover/Konsyans.jpg') no-repeat -9999px -9999px; }
+#preload-20 { background-image: url('../img/album cover/Eritaj.jpg') no-repeat -9999px -9999px; }
+#preload-21 { background-image: url('../img/album cover/Misiyon.jpg') no-repeat -9999px -9999px; }
 
 .miniature {
   animation: changeMiniature linear 30s infinite;
@@ -35,21 +36,22 @@
 
 @keyframes changeMiniature {
   0%,100%  {background-image: url('../img/miniature/WIB.png');}
-  6.25% {background-image: url('../img/miniature/DLO.png');}
-  12.5%  {background-image: url('../img/miniature/Fòs é kouraj.png');}
-  18.75% {background-image: url('../img/miniature/Piétònn la (Philippe BLAZE).png');}
-  25%  {background-image: url('../img/miniature/Sò a limanité.png');}
-  31.25% {background-image: url('../img/miniature/Sonjé BINO (Philippe BLAZE).png');}
-  37.5%  {background-image: url('../img/miniature/LILY.png');}
-  43.75% {background-image: url('../img/miniature/Petite_Marie.png');}
-  50%  {background-image: url('../img/miniature/Nou_mélé_Philippe_BLAZE.png');}
-  56.25% {background-image: url('../img/miniature/Chanson_Hommage_aux_Gwo_Mòdan.png');}
-  62.5%  {background-image: url('../img/miniature/Philippe_BLAZE_piano_bar.png');}
-  68.75% {background-image: url('../img/miniature/Sèl_si_on_gran_chimen.png');}
-  75%  {background-image: url('../img/miniature/Ekzòd.png');}
-  81.25% {background-image: url('../img/miniature/Avé Maria Antillais.png');}
-  87.5%  {background-image: url('../img/miniature/Pénélope.png');}
-  93.75% {background-image: url('../img/miniature/Konjé bonifié.png');}
+  5.88%    {background-image: url('../img/miniature/DLO.png');}
+  11.76%   {background-image: url('../img/miniature/Fòs é kouraj.png');}
+  17.64%   {background-image: url('../img/miniature/Piétònn la (Philippe BLAZE).png');}
+  23.52%   {background-image: url('../img/miniature/Sò a limanité.png');}
+  29.4%    {background-image: url('../img/miniature/Sonjé BINO (Philippe BLAZE).png');}
+  35.28%   {background-image: url('../img/miniature/LILY.png');}
+  41.16%   {background-image: url('../img/miniature/Petite_Marie.png');}
+  47.07%   {background-image: url('../img/miniature/Nou_mélé_Philippe_BLAZE.png');}
+  52.92%   {background-image: url('../img/miniature/Chanson_Hommage_aux_Gwo_Mòdan.png');}
+  58.8%    {background-image: url('../img/miniature/Philippe_BLAZE_piano_bar.png');}
+  64.68%   {background-image: url('../img/miniature/Sèl_si_on_gran_chimen.png');}
+  70.56%   {background-image: url('../img/miniature/Ekzòd.png');}
+  76.44%   {background-image: url('../img/miniature/Avé Maria Antillais.png');}
+  82.32%   {background-image: url('../img/miniature/Pénélope.png');}
+  88.2%    {background-image: url('../img/miniature/Konjé bonifié.png');}
+  94.08%   {background-image: url('../img/miniature/blokaj.png');}
 }
 
 .albumCover {
