--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,20 +1,20 @@
-#preload-01 { background-image: url('../img/miniature/WIB.png') no-repeat -9999px -9999px; }
-#preload-02 { background-image: url('../img/miniature/DLO.png') no-repeat -9999px -9999px; }
-#preload-03 { background-image: url('../img/miniature/Fòs é kouraj.png') no-repeat -9999px -9999px; }
-#preload-04 { background-image: url('../img/miniature/Piétònn la (Philippe BLAZE).png') no-repeat -9999px -9999px; }
-#preload-05 { background-image: url('../img/miniature/Sò a limanité.png') no-repeat -9999px -9999px; }
-#preload-06 { background-image: url('../img/miniature/Sonjé BINO (Philippe BLAZE).png') no-repeat -9999px -9999px; }
-#preload-07 { background-image: url('../img/miniature/LILY.png') no-repeat -9999px -9999px; }
-#preload-08 { background-image: url('../img/miniature/Petite_Marie.png') no-repeat -9999px -9999px; }
-#preload-09 { background-image: url('../img/miniature/Nou_mélé_Philippe_BLAZE.png') no-repeat -9999px -9999px; }
-#preload-10 { background-image: url('../img/miniature/Chanson_Hommage_aux_Gwo_Mòdan.png') no-repeat -9999px -9999px; }
-#preload-11 { background-image: url('../img/miniature/Philippe_BLAZE_piano_bar.png') no-repeat -9999px -9999px; }
-#preload-12 { background-image: url('../img/miniature/Sèl_si_on_gran_chimen.png') no-repeat -9999px -9999px; }
-#preload-13 { background-image: url('../img/miniature/Ekzòd.png') no-repeat -9999px -9999px; }
-#preload-14 { background-image: url('../img/miniature/Avé Maria Antillais.png') no-repeat -9999px -9999px; }
-#preload-15 { background-image: url('../img/miniature/Pénélope.png') no-repeat -9999px -9999px; }
-#preload-16 { background-image: url('../img/miniature/Konjé bonifié.png') no-repeat -9999px -9999px; }
-#preload-17 { background-image: url('../img/miniature/blokaj.png') no-repeat -9999px -9999px; }
+#preload-01 { background-image: url('../img/miniature/0.png') no-repeat -9999px -9999px; }
+#preload-02 { background-image: url('../img/miniature/1.png') no-repeat -9999px -9999px; }
+#preload-03 { background-image: url('../img/miniature/2.png') no-repeat -9999px -9999px; }
+#preload-04 { background-image: url('../img/miniature/3.png') no-repeat -9999px -9999px; }
+#preload-05 { background-image: url('../img/miniature/4.png') no-repeat -9999px -9999px; }
+#preload-06 { background-image: url('../img/miniature/5.png') no-repeat -9999px -9999px; }
+#preload-07 { background-image: url('../img/miniature/6.png') no-repeat -9999px -9999px; }
+#preload-08 { background-image: url('../img/miniature/7.png') no-repeat -9999px -9999px; }
+#preload-09 { background-image: url('../img/miniature/8.png') no-repeat -9999px -9999px; }
+#preload-10 { background-image: url('../img/miniature/9.png') no-repeat -9999px -9999px; }
+#preload-11 { background-image: url('../img/miniature/10.png') no-repeat -9999px -9999px; }
+#preload-12 { background-image: url('../img/miniature/11.png') no-repeat -9999px -9999px; }
+#preload-13 { background-image: url('../img/miniature/12.png') no-repeat -9999px -9999px; }
+#preload-14 { background-image: url('../img/miniature/13.png') no-repeat -9999px -9999px; }
+#preload-15 { background-image: url('../img/miniature/14.png') no-repeat -9999px -9999px; }
+#preload-16 { background-image: url('../img/miniature/15.png') no-repeat -9999px -9999px; }
+#preload-17 { background-image: url('../img/miniature/16.png') no-repeat -9999px -9999px; }
 
 #preload-18 { background-image: url('../img/album cover/Mal_tèt.jpeg') no-repeat -9999px -9999px; }
 #preload-19 { background-image: url('../img/album cover/Konsyans.jpg') no-repeat -9999px -9999px; }
@@ -31,27 +31,37 @@
   border: 2px solid var(--my-color);
   color: #FFF;
   background-size: cover;
-  background-image: url('../img/miniature/WIB.png');
+  background-image: url('../img/miniature/0.png');
+}
+
+.miniatureInv {
+  height: 40vh !important;
+  width: 68vh !important;
+  text-decoration: none;
+  border-radius: 25px;
+  border: 2px solid var(--my-color);
+  color: #FFF;
+  background-size: cover;
 }
 
 @keyframes changeMiniature {
-  0%,100%  {background-image: url('../img/miniature/WIB.png');}
-  5.88%    {background-image: url('../img/miniature/DLO.png');}
-  11.76%   {background-image: url('../img/miniature/Fòs é kouraj.png');}
-  17.64%   {background-image: url('../img/miniature/Piétònn la (Philippe BLAZE).png');}
-  23.52%   {background-image: url('../img/miniature/Sò a limanité.png');}
-  29.4%    {background-image: url('../img/miniature/Sonjé BINO (Philippe BLAZE).png');}
-  35.28%   {background-image: url('../img/miniature/LILY.png');}
-  41.16%   {background-image: url('../img/miniature/Petite_Marie.png');}
-  47.07%   {background-image: url('../img/miniature/Nou_mélé_Philippe_BLAZE.png');}
-  52.92%   {background-image: url('../img/miniature/Chanson_Hommage_aux_Gwo_Mòdan.png');}
-  58.8%    {background-image: url('../img/miniature/Philippe_BLAZE_piano_bar.png');}
-  64.68%   {background-image: url('../img/miniature/Sèl_si_on_gran_chimen.png');}
-  70.56%   {background-image: url('../img/miniature/Ekzòd.png');}
-  76.44%   {background-image: url('../img/miniature/Avé Maria Antillais.png');}
-  82.32%   {background-image: url('../img/miniature/Pénélope.png');}
-  88.2%    {background-image: url('../img/miniature/Konjé bonifié.png');}
-  94.08%   {background-image: url('../img/miniature/blokaj.png');}
+  0%,100%  {background-image: url('../img/miniature/0.png');}
+  5.88%    {background-image: url('../img/miniature/1.png');}
+  11.76%   {background-image: url('../img/miniature/2.png');}
+  17.64%   {background-image: url('../img/miniature/3.png');}
+  23.52%   {background-image: url('../img/miniature/4.png');}
+  29.4%    {background-image: url('../img/miniature/5.png');}
+  35.28%   {background-image: url('../img/miniature/6.png');}
+  41.16%   {background-image: url('../img/miniature/7.png');}
+  47.07%   {background-image: url('../img/miniature/8.png');}
+  52.92%   {background-image: url('../img/miniature/9.png');}
+  58.8%    {background-image: url('../img/miniature/10.png');}
+  64.68%   {background-image: url('../img/miniature/11.png');}
+  70.56%   {background-image: url('../img/miniature/12.png');}
+  76.44%   {background-image: url('../img/miniature/13.png');}
+  82.32%   {background-image: url('../img/miniature/14.png');}
+  88.2%    {background-image: url('../img/miniature/15.png');}
+  94.08%   {background-image: url('../img/miniature/16.png');}
 }
 
 .albumCover {
