--- a/assets/css/aud-player.css
+++ b/assets/css/aud-player.css
@@ -194,3 +194,20 @@
     display: none !important;
   } 
 }
+
+@media screen and (max-width: 1080px) and (orientation: portrait) {
+  .imageContainer {
+    width: 100vw !important;
+    height: 100vw !important;
+  }
+  .listMusicMobile {
+    width: 100%;
+    text-align: center;
+  }
+  button {
+    left:0;
+    rigth:0;
+    width: 100%;
+    text-align: center;
+  }
+}
