--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -9,9 +9,10 @@ body {
 
 @keyframes changeBg{
   0%,100%  {background-image: url('../img/ConcertPhilippe1.png');}
-  25% {background-image: url('../img/ConcertPhilippe2.png');}
-  50% {background-image: url('../img/photo_concert_2.jpg');}
-  75% {background-image: url('../img/photo_concert.jpg');}
+  20% {background-image: url('../img/ConcertPhilippe2.png');}
+  40% {background-image: url('../img/photo_concert_2.jpg');}
+  60% {background-image: url('../img/photo_concert.jpg');}
+  80% {background-image: url('../img/Concert Ka Fé Tan.jpg');}
 }
 
 .accueilH3 img {
