Ajout nvlle pochette sur page d'acceueil

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -86,7 +86,7 @@
   20%  {background-image: url('../img/album cover/Konsyans.jpg');}
   40%  {background-image: url('../img/album cover/Eritaj.jpg');}
   60%  {background-image: url('../img/album cover/Misiyon.jpg');}
-  80%  {background-image: url('../img/album cover/Ka Fé Tan');}
+  80%  {background-image: url('../img/album cover/Ka Fé Tan.jpg');}
 }
 
 .miniatureandcover {
