Ajout d'une Chanson de Gilbert Coco

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -20,7 +20,8 @@
 #preload-19 { background-image: url('../img/album cover/Konsyans.jpg') no-repeat -9999px -9999px; }
 #preload-20 { background-image: url('../img/album cover/Eritaj.jpg') no-repeat -9999px -9999px; }
 #preload-21 { background-image: url('../img/album cover/Misiyon.jpg') no-repeat -9999px -9999px; }
-#preload-21 { background-image: url('../img/album cover/Ka Fé Tan.jpg') no-repeat -9999px -9999px; }
+#preload-22 { background-image: url('../img/album cover/Ka Fé Tan.jpg') no-repeat -9999px -9999px; }
+#preload-23 { background-image: url('../img/album cover/Kembé Red.jpg') no-repeat -9999px -9999px; }
 
 .miniature {
   animation: changeMiniature linear 30s infinite;
@@ -83,10 +84,11 @@
 
 @keyframes changeAlbumCover {
   0%,100%  {background-image: url('../img/album cover/Mal_tèt.jpeg');}
-  20%  {background-image: url('../img/album cover/Konsyans.jpg');}
-  40%  {background-image: url('../img/album cover/Eritaj.jpg');}
-  60%  {background-image: url('../img/album cover/Misiyon.jpg');}
-  80%  {background-image: url('../img/album cover/Ka Fé Tan.jpg');}
+  16.7%  {background-image: url('../img/album cover/Konsyans.jpg');}
+  33.3%  {background-image: url('../img/album cover/Eritaj.jpg');}
+  50%  {background-image: url('../img/album cover/Misiyon.jpg');}
+  66.7%  {background-image: url('../img/album cover/Ka Fé Tan.jpg');}
+  83.3%  {background-image: url('../img/album cover/Kembé Red.jpg');}
 }
 
 .miniatureandcover {
