--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -90,7 +90,7 @@
   42.86%  {background-image: url('../img/album cover/Misiyon.jpg');}
   57.14%  {background-image: url('../img/album cover/Ka Fé Tan.jpg');}
   71.43%  {background-image: url('../img/album cover/Kembé Red.jpg');}
-  85.71%  {background-image: url('../img/album cover/A la repriz.png');}
+  85.71%  {background-image: url('../img/album cover/A la repriz.jpg');}
 }
 
 .miniatureandcover {
