--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -23,6 +23,8 @@
 #preload-22 { background-image: url('../img/album cover/Ka Fé Tan.jpg') no-repeat -9999px -9999px; }
 #preload-23 { background-image: url('../img/album cover/Kembé Red.jpg') no-repeat -9999px -9999px; }
 #preload-24 { background-image: url('../img/album cover/A la repriz.jpg') no-repeat -9999px -9999px; }
+#preload-25 { background-image: url('../img/album cover/Ti Kaz An Bwa La.jpg') no-repeat -9999px -9999px; }
+#preload-26 { background-image: url('../img/album cover/Lokans.jpg') no-repeat -9999px -9999px; }
 
 .miniature {
   animation: changeMiniature linear 30s infinite;
@@ -85,12 +87,14 @@
 
 @keyframes changeAlbumCover {
   0%,100%  {background-image: url('../img/album cover/Mal_tèt.jpg');}
-  14.29%  {background-image: url('../img/album cover/Konsyans.jpg');}
-  28.57%  {background-image: url('../img/album cover/Eritaj.jpg');}
-  42.86%  {background-image: url('../img/album cover/Misiyon.jpg');}
-  57.14%  {background-image: url('../img/album cover/Ka Fé Tan.jpg');}
-  71.43%  {background-image: url('../img/album cover/Kembé Red.jpg');}
-  85.71%  {background-image: url('../img/album cover/A la repriz.jpg');}
+  11%  {background-image: url('../img/album cover/Konsyans.jpg');}
+  22%  {background-image: url('../img/album cover/Eritaj.jpg');}
+  33%  {background-image: url('../img/album cover/Misiyon.jpg');}
+  44%  {background-image: url('../img/album cover/Ka Fé Tan.jpg');}
+  55%  {background-image: url('../img/album cover/Kembé Red.jpg');}
+  66%  {background-image: url('../img/album cover/A la repriz.jpg');}
+  77%  {background-image: url('../img/album cover/Ti Kaz An Bwa La.jpg');}
+  88%  {background-image: url('../img/album cover/Lokans.jpg');}
 }
 
 .miniatureandcover {
