--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -29,6 +29,7 @@
 #preload-28 { background-image: url('../img/album cover/GWAKASONNE - Présumés Coupables - Cover.jpg') no-repeat -9999px -9999px; }
 #preload-29 { background-image: url('../img/album cover/José MANCLIERE Doubout pou Gadé.jpg') no-repeat -9999px -9999px; }
 #preload-30 { background-image: url('../img/album cover/Gérard Lockel - Cover.jpg') no-repeat -9999px -9999px; }
+#preload-30 { background-image: url('../img/album cover/Robert Loyson.jpg') no-repeat -9999px -9999px; }
 
 .miniature {
   animation: changeMiniature linear 30s infinite;
@@ -91,18 +92,19 @@
 
 @keyframes changeAlbumCover {
   0%,100%  {background-image: url('../img/album cover/Mal_tèt.jpg');}
-  7.69%  {background-image: url('../img/album cover/Konsyans.jpg');}
-  15.38%  {background-image: url('../img/album cover/Eritaj.jpg');}
-  23.07%  {background-image: url('../img/album cover/Misiyon.jpg');}
-  30.76%  {background-image: url('../img/album cover/Ka Fé Tan.jpg');}
-  38.45%  {background-image: url('../img/album cover/Kembé Red.jpg');}
-  46.14%  {background-image: url('../img/album cover/A la repriz.jpg');}
-  53.83%  {background-image: url('../img/album cover/Ti Kaz An Bwa La.jpg');}
-  61.52%  {background-image: url('../img/album cover/Lokans.jpg');}
-  69.21%  {background-image: url('../img/album cover/Liméro twa.jpg');}
-  76.90%  {background-image: url('../img/album cover/GWAKASONNE - Présumés Coupables - Cover.jpg');}
-  84.59%  {background-image: url('../img/album cover/José MANCLIERE Doubout pou Gadé.jpg');}
-  92.28%  {background-image: url('../img/album cover/Gérard Lockel - Cover.jpg');}
+  07.14%  {background-image: url('../img/album cover/Konsyans.jpg');}
+  14.28%  {background-image: url('../img/album cover/Eritaj.jpg');}
+  21.42%  {background-image: url('../img/album cover/Misiyon.jpg');}
+  28.56%  {background-image: url('../img/album cover/Ka Fé Tan.jpg');}
+  35.70%  {background-image: url('../img/album cover/Kembé Red.jpg');}
+  42.84%  {background-image: url('../img/album cover/A la repriz.jpg');}
+  49.98%  {background-image: url('../img/album cover/Ti Kaz An Bwa La.jpg');}
+  57.12%  {background-image: url('../img/album cover/Lokans.jpg');}
+  64.26%  {background-image: url('../img/album cover/Liméro twa.jpg');}
+  71.40%  {background-image: url('../img/album cover/GWAKASONNE - Présumés Coupables - Cover.jpg');}
+  78.54%  {background-image: url('../img/album cover/José MANCLIERE Doubout pou Gadé.jpg');}
+  85.68%  {background-image: url('../img/album cover/Gérard Lockel - Cover.jpg');}
+  92.82%  {background-image: url('../img/album cover/Robert Loyson.jpg');}
 }
 
 .miniatureandcover {
