--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -922,3 +922,53 @@ footer {
   width: 20vw !important;
   text-align: center;
 }
+
+#flexMusic {
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+  width: 80%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-size: 10pt;
+  color: #fff;
+  text-align: center;
+  text-shadow: 1px 1px 1px #000;
+  text-decoration: none; 
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.AudioClass {
+  display: flex;
+  flex-direction: column;
+  justify-content:space-around;
+  text-decoration: none;
+}
+
+.VideoClass {
+  display: flex;
+  flex-direction: column;
+  justify-content:space-around;
+  text-decoration: none;
+}
+
+a.callAudio:link, a.callAudio:visited {
+  text-decoration: none;
+  color: #fff;
+}
+
+a.callAudio:hover, a.callAudio:active {
+  text-decoration: underline;
+  color: #fff;
+}
+
+a.callVideo:link, a.callVideo:visited {
+  text-decoration: none;
+  color: #fff;
+}
+
+a.callVideo:hover, a.callVideo:active {
+  text-decoration: underline;
+  color: #fff;
+}
