améliotion du CV de philippe

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -148,6 +148,10 @@ nav p {
     overflow: visible;
   }
 
+  .cv {
+    font-size: 2em !important;
+  }
+
   .my_page {
     display: flex;
     flex-direction: column;
