--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,37 +1,3 @@
-#preload-01 { background-image: url('../img/miniature/0.png') no-repeat -9999px -9999px; }
-#preload-02 { background-image: url('../img/miniature/1.png') no-repeat -9999px -9999px; }
-#preload-03 { background-image: url('../img/miniature/2.png') no-repeat -9999px -9999px; }
-#preload-04 { background-image: url('../img/miniature/3.png') no-repeat -9999px -9999px; }
-#preload-05 { background-image: url('../img/miniature/4.png') no-repeat -9999px -9999px; }
-#preload-06 { background-image: url('../img/miniature/5.png') no-repeat -9999px -9999px; }
-#preload-07 { background-image: url('../img/miniature/6.png') no-repeat -9999px -9999px; }
-#preload-08 { background-image: url('../img/miniature/7.png') no-repeat -9999px -9999px; }
-#preload-09 { background-image: url('../img/miniature/8.png') no-repeat -9999px -9999px; }
-#preload-10 { background-image: url('../img/miniature/9.png') no-repeat -9999px -9999px; }
-#preload-11 { background-image: url('../img/miniature/10.png') no-repeat -9999px -9999px; }
-#preload-12 { background-image: url('../img/miniature/11.png') no-repeat -9999px -9999px; }
-#preload-13 { background-image: url('../img/miniature/12.png') no-repeat -9999px -9999px; }
-#preload-14 { background-image: url('../img/miniature/13.png') no-repeat -9999px -9999px; }
-#preload-15 { background-image: url('../img/miniature/14.png') no-repeat -9999px -9999px; }
-#preload-16 { background-image: url('../img/miniature/15.png') no-repeat -9999px -9999px; }
-#preload-17 { background-image: url('../img/miniature/16.png') no-repeat -9999px -9999px; }
-
-#preload-18 { background-image: url('../img/album cover/Mal_tèt.jpg') no-repeat -9999px -9999px; }
-#preload-19 { background-image: url('../img/album cover/Konsyans.jpg') no-repeat -9999px -9999px; }
-#preload-20 { background-image: url('../img/album cover/Eritaj.jpg') no-repeat -9999px -9999px; }
-#preload-21 { background-image: url('../img/album cover/Misiyon.jpg') no-repeat -9999px -9999px; }
-#preload-22 { background-image: url('../img/album cover/Ka Fé Tan.jpg') no-repeat -9999px -9999px; }
-#preload-23 { background-image: url('../img/album cover/Kembé Red.jpg') no-repeat -9999px -9999px; }
-#preload-24 { background-image: url('../img/album cover/A la repriz.jpg') no-repeat -9999px -9999px; }
-#preload-25 { background-image: url('../img/album cover/Ti Kaz An Bwa La.jpg') no-repeat -9999px -9999px; }
-#preload-26 { background-image: url('../img/album cover/Lokans.jpg') no-repeat -9999px -9999px; }
-#preload-27 { background-image: url('../img/album cover/Liméro twa.jpg') no-repeat -9999px -9999px; }
-#preload-28 { background-image: url('../img/album cover/GWAKASONNE - Présumés Coupables - Cover.jpg') no-repeat -9999px -9999px; }
-#preload-29 { background-image: url('../img/album cover/José MANCLIERE Doubout pou Gadé.jpg') no-repeat -9999px -9999px; }
-#preload-30 { background-image: url('../img/album cover/Gérard Lockel - Cover.jpg') no-repeat -9999px -9999px; }
-#preload-31 { background-image: url('../img/album cover/Robert Loyson.jpg') no-repeat -9999px -9999px; }
-#preload-32 { background-image: url('../img/album cover/Les Maitres du Gwoka Vol.3.jpg') no-repeat -9999px -9999px; }
-
 .miniature {
   animation: changeMiniature linear 30s infinite;
   animation-delay: -2s;
@@ -42,7 +8,7 @@
   border: 2px solid var(--my-color);
   color: #FFF;
   background-size: cover;
-  background-image: url('../img/miniature/0.png');
+  background-image: url('');
 }
 
 .miniatureInv {
@@ -59,24 +25,20 @@
   height: 150vh;
 }
 
-@keyframes changeMiniature {
-  0%,100%  {background-image: url('../img/miniature/0.png');}
-  5.88%    {background-image: url('../img/miniature/1.png');}
-  11.76%   {background-image: url('../img/miniature/2.png');}
-  17.64%   {background-image: url('../img/miniature/3.png');}
-  23.52%   {background-image: url('../img/miniature/4.png');}
-  29.4%    {background-image: url('../img/miniature/5.png');}
-  35.28%   {background-image: url('../img/miniature/6.png');}
-  41.16%   {background-image: url('../img/miniature/7.png');}
-  47.07%   {background-image: url('../img/miniature/8.png');}
-  52.92%   {background-image: url('../img/miniature/9.png');}
-  58.8%    {background-image: url('../img/miniature/10.png');}
-  64.68%   {background-image: url('../img/miniature/11.png');}
-  70.56%   {background-image: url('../img/miniature/12.png');}
-  76.44%   {background-image: url('../img/miniature/13.png');}
-  82.32%   {background-image: url('../img/miniature/14.png');}
-  88.2%    {background-image: url('../img/miniature/15.png');}
-  94.08%   {background-image: url('../img/miniature/16.png');}
+#miniature {
+  transition: background-image 1s ease-in-out;
+}
+
+#miniature.transition {
+  background-image: url(images[currentImageIndex]);
+}
+
+#cover {
+  transition: background-image 1s ease-in-out;
+}
+
+#cover.transition {
+  background-image: url(images[currentImageIndex]);
 }
 
 .albumCover {
@@ -88,25 +50,7 @@
   border: 2px solid var(--my-color);
   color: #FFF;
   background-size: cover;
-  background-image: url('../img/album cover/Mal_tèt.jpeg');
-}
-
-@keyframes changeAlbumCover {
-  0%,100%  {background-image: url('../img/album cover/Mal_tèt.jpg');}
-  06.67%  {background-image: url('../img/album cover/Konsyans.jpg');}
-  13.33%  {background-image: url('../img/album cover/Eritaj.jpg');}
-  20.00%  {background-image: url('../img/album cover/Misiyon.jpg');}
-  26.67%  {background-image: url('../img/album cover/Ka Fé Tan.jpg');}
-  33.33%  {background-image: url('../img/album cover/Kembé Red.jpg');}
-  40.00%  {background-image: url('../img/album cover/A la repriz.jpg');}
-  46.67%  {background-image: url('../img/album cover/Ti Kaz An Bwa La.jpg');}
-  53.33%  {background-image: url('../img/album cover/Lokans.jpg');}
-  60.00%  {background-image: url('../img/album cover/Liméro twa.jpg');}
-  66.67%  {background-image: url('../img/album cover/GWAKASONNE - Présumés Coupables - Cover.jpg');}
-  73.33%  {background-image: url('../img/album cover/José MANCLIERE Doubout pou Gadé.jpg');}
-  80.00%  {background-image: url('../img/album cover/Gérard Lockel - Cover.jpg');}
-  86.67%  {background-image: url('../img/album cover/Robert Loyson.jpg');}
-  92.82%  {background-image: url('../img/album cover/Les Maitres du Gwoka Vol.3.jpg');}
+  background-image: url('');
 }
 
 .miniatureandcover {
